changing the assert methods to assertj