@@ -1,6 +1,8 @@
 package com.gascho.crackingTheBill.services;
 
+import com.gascho.crackingTheBill.dtos.PaymentTotals;
 import org.junit.jupiter.api.Test;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import java.util.Arrays;
 import java.util.List;
@@ -10,7 +12,7 @@ public class PaymentServiceTest {
     @Test
     public void totalPaymentCalculation() {
         List<Double> userOrders = Arrays.asList(40.00,2.00);
-        List<Double> friendOrders = Arrays.asList(8.00);
+        List<Double> friendOrders = List.of(8.00);
 
         double deliveryValue = 8.00;
         double descountValue = 20.00;
@@ -27,7 +29,7 @@ public class PaymentServiceTest {
                 isPercentualDescount
         );
 
-        asserEquals(31.92, totals.getUserBill());
-        assertEquals(6.08, totals.getFriendBill());
+        assertThat(totals.getUserBill()).isEqualTo(31.92);
+        assertThat(totals.getFriendBill()).isEqualTo(6.08);
     }
 }
